--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "primereact/resources/themes/lara-light-cyan/theme.css";
+
 /* :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -22,4 +24,11 @@ body {
 
 body, html {
   font-family: 'Satoshi', sans-serif;
+}
+
+input {
+  border: 1px solid #E4E4E4;
+  padding: 1rem 1.5rem;
+  width: 100%;
+  border-radius: 0.25rem;
 }
