--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,9 +26,13 @@ body, html {
   font-family: 'Satoshi', sans-serif;
 }
 
-input {
+input, select {
   border: 1px solid #E4E4E4;
   padding: 1rem 1.5rem;
   width: 100%;
   border-radius: 0.25rem;
+}
+
+select {
+  padding: 1rem;
 }
